      collection and tracks from USB Mass Storage collection. Guessing uses the
      same algorithm as Local Collection.
    * libgpod requirement raised from 0.7.0 to 0.7.93 for better maintainability.
    * When hovering iPod, UMS or MTP collection in collection browser,
      "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.

  BUGFIXES:
    * Don't report collection of USB Mass Storage tracks as None.
    * When adding, changing and removing tracks in USB Mass Storage collection,
      actually update the user interface to show it.
    * Remove empty folders when deleting tracks from USB Mass Storage collection.
    * Don't copy tracks to USB Mass Storage collection in move operation.
    * Fix defunct aborting of transfers to USB Mass Storage collection. (BR 290448)
    * Do not double-transcode tracks when importing from an audio CD. (BR 263775)
    * Allow ripping of CD tracks with special characters in name tranks to
      Björn Steinbrink. (BR 224437)
    * Don't allow tracks to be dropped to their own collection and to
      non-writable collections; indicate the fact visually. (BR 291068)
    * Fix scrollarea following keyboard navigation. (BR 259791)
    * Fix crash when trying to save custom equalizer presets. (BR 286227)
    * Fix crash due to my silly method order error. (BR 291968)
    * Fix favored random track playing picking recent played songs (BR 244442)
    * Fix crashes with Bookmarks (BR 283753) thanks to Charles Reiss
    * Fix memory leaks in USB Mass Storage collection where track objects were
      never freed due to circular references.
    * Fix rare APG solver crash. (BR 290533)
    * Compilations are handled more consistently on iPods. (BR 232072)

Version 2.5
  FEATURES:
    * Now It's possible to use formated strings for prefix and suffix in 
      Playlist's layout items.

  BUGFIXES:
    * Do not crash when iPod doesn't have a master playlist. (BR 288936)
    * Fix Last.fm not finding KDE Wallet. (BR 286741)