@@ -38,6 +38,7 @@ Version 2.6-Beta 1
       "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.
 
   BUGFIXES:
+    * Don't misbehave when track is dropped directly to saved playlist. (BR 293295)
     * Don't report collection of USB Mass Storage tracks as None.
     * When adding, changing and removing tracks in USB Mass Storage collection,
       actually update the user interface to show it.
